k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ccoe-chat-ops
  labels:
    app: ccoe-chat-ops
    # Enable Istio sidecar injection
    istio-injection: enabled
